--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 21 02:41:27 BRST 2016
-sdk.dir=/Users/dev/Library/Android/sdk
+#Thu Dec 22 09:49:37 BRST 2016
+sdk.dir=/Users/leonardo.saganski/Library/Android/sdk
